[metadata]
name = yt_feed

version = 0.0.6
author = novapy
author_email = puma1505@outlook.com
description = Gives subscriptions for things
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NeonSupernova/yt-feed
project_urls =
    Bug Tracker = https://github.com/NeonSupernova/yt-feed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    feed = yt_feed:main
